try to fix improve alignment of logo

--- a/css/main.css
+++ b/css/main.css
@@ -399,6 +399,7 @@ html {
     }
     .logo{
         line-height:100%;
+        padding-top:5px;
     }
     
     .fa-atlas{
